--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 <body>
     <h1>People entered</h1>
     <h2 id="count-el">0</h2>
-    <button id="increment-btn" onclick="increment()">INCREMENT</button>
-    <button id="save-btn" onclick="save()">SAVE</button>
+    <button id="increment-btn">INCREMENT</button>
+    <button id="save-btn">SAVE</button>
     <p id="save-el">Previous entires: </p>
+    <h1>Total: <span id="total-el"></span></h1>
     <script src="index.js"></script>
 </body>
 </html>
