--- a/index.html
+++ b/index.html
@@ -8,12 +8,17 @@
     <title>Passenger Counter</title>
 </head>
 <body>
-    <h1>People entered</h1>
-    <h2 id="count-el">0</h2>
-    <button id="increment-btn">INCREMENT</button>
-    <button id="save-btn">SAVE</button>
-    <p id="save-el">Previous entires: </p>
-    <h1>Total: <span id="total-el"></span></h1>
+    <div class="content">
+        <h1>Passengers entered</h1>
+        <h2 id="count-el">0</h2>
+        <button id="increment-btn">INCREMENT</button>
+        <button id="save-btn">SAVE</button>
+        <p>Previous entires: <span id="save-el"></span></p>
+        <h1>Total: </h1>
+        <h2 id="total-el">0</h2>
+        <button id="reset-btn">RESET</button>
+    </div>
+    
     <script src="index.js"></script>
 </body>
 </html>
